RESOLVED FIXED Bug 82469
LayoutTests: [r112391] Pixel test failure of svg/custom/preserve-aspect-ratio-syntax.svg
https://bugs.webkit.org/show_bug.cgi?id=82469
Summary LayoutTests: [r112391] Pixel test failure of svg/custom/preserve-aspect-ratio...
Attachments
Patch (23.38 KB, patch)
2012-03-31 08:15 PDT, Nikolas Zimmermann
no flags
Patch (55.13 KB, patch)
2012-03-31 08:40 PDT, Nikolas Zimmermann
no flags
Archive of layout-test-results from ec2-cr-linux-01 (7.51 MB, application/zip)
2012-03-31 09:13 PDT, WebKit Review Bot
no flags
Patch v2 (57.25 KB, patch)
2012-03-31 11:05 PDT, Nikolas Zimmermann
krit: review+
Nikolas Zimmermann
Comment 1 2012-03-28 09:12:25 PDT
Sorry for that, I didn't realize its broken - the test is skipped by default on Mac Lion (see platform/mac-lion/Skipped).
Nikolas Zimmermann
Comment 2 2012-03-28 09:19:38 PDT
grml, on Mac Lion, the test is skipped for a reason: it doesn't display anything, the entity parsing seems broken - probably a long standing bug :( Feel free to revert the problematic patch or skip the test - i can't promise I'll find a solution during the next hour(s).
Nikolas Zimmermann
Comment 3 2012-03-31 08:15:17 PDT
Nikolas Zimmermann
Comment 4 2012-03-31 08:39:56 PDT
Oops, forgot to include the rebaselines in my patch, will reupload it.
Nikolas Zimmermann
Comment 5 2012-03-31 08:40:54 PDT
WebKit Review Bot
Comment 6 2012-03-31 09:13:19 PDT
Comment on attachment 134957 [details] Patch Attachment 134957 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/12288785 New failing tests: svg/custom/preserve-aspect-ratio-syntax.svg
WebKit Review Bot
Comment 7 2012-03-31 09:13:25 PDT
Created attachment 134959 [details] Archive of layout-test-results from ec2-cr-linux-01 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-01 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Nikolas Zimmermann
Comment 8 2012-03-31 11:05:20 PDT
Created attachment 134968 [details] Patch v2
Dirk Schulze
Comment 9 2012-03-31 11:56:55 PDT
Comment on attachment 134968 [details] Patch v2 R=me
Nikolas Zimmermann
Comment 10 2012-03-31 12:13:39 PDT
Csaba Osztrogonác
Comment 11 2012-04-01 01:27:47 PDT
(In reply to comment #10) > Committed r112799: <http://trac.webkit.org/changeset/112799> I updated the test result on Qt, because it failed on the bot - http://trac.webkit.org/changeset/112812.
Nikolas Zimmermann
Comment 12 2012-04-01 05:20:54 PDT
(In reply to comment #11) > (In reply to comment #10) > > Committed r112799: <http://trac.webkit.org/changeset/112799> > > I updated the test result on Qt, because it failed on the bot - http://trac.webkit.org/changeset/112812. Your result is correct, once the test can be unskipped on Mac/Lion, I'll regenerate the result, see bug 82577.
Stephen Chenney
Comment 13 2012-04-02 08:41:44 PDT
Note You need to log in before you can comment on or make changes to this bug.