LayoutTests: [r112391] Pixel test failure of svg/custom/preserve-aspect-ratio-syntax.svg https://bugs.webkit.org/show_bug.cgi?id=82469

Source/WebCore:

Fix regression from r112391. The test excerising this code path is skipped on Lion, due to a libxml2 bug.
I didn't notice I broke preserveAspectRatio parsing for many corner cases, revert to old logic.

* svg/SVGPreserveAspectRatio.cpp:
(WebCore::SVGPreserveAspectRatio::parse):

LayoutTests:

Reviewed by Dirk Schulze.

Unskip test, as the regression is fixed.

* platform/qt/Skipped:
* svg/custom/preserve-aspect-ratio-syntax.svg:
    Remove one incorrect testcase (which was actually valid and thus doesn't result in a default pAR attribute value).
    Can't rebaseline this on Mac Lion, as its skipped to a libxml2 bug, which will be addressed soon.
* svg/dom/preserve-aspect-ratio-parser-expected.txt:
* svg/dom/preserve-aspect-ratio-parser.html: Switch numbers to constants, so this test is actually readable.

Canonical link: https://commits.webkit.org/100172@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112799 268f45cc-cd09-0410-ab3c-d52691b4dbfc